Fix jumpy bug on shop

--- a/src/app/products/products.component.scss
+++ b/src/app/products/products.component.scss
@@ -201,6 +201,8 @@ button#clear {
     letter-spacing: normal;
     color: #000000;
     margin-top: 12px;
+    height: 40px;
+
   }
   .single-price{
     background: #fff;
